# rename-simple

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  TECH-NOTES.md  flake.nix  shell.nix
.github/workflows/: ci.yml
man/: rename-simple.1
src/: lib.rs  main.rs
tests/: cli_tests.rs  recursive_tests.rs  transform_tests.rs  unix_tests.rs
