[package]
name = "rename-simple"
version = "0.3.1"
edition = "2021"
rust-version = "1.70"
description = "Rename files by normalizing accented characters, spaces and special chars to clean ASCII slugs"
license = "MIT"
repository = "https://github.com/darkone-linux/rename-simple"
readme = "README.md"
keywords = ["rust", "cli", "rename"]
categories = ["command-line-utilities"]

[[bin]]
name = "rename-simple"
path = "src/main.rs"

[lib]
name = "rename_files"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
unicode-normalization = "0.1"

# Used on Linux for renameat2(RENAME_NOREPLACE): refuses to overwrite the
# destination, closing the TOCTOU window between `op.to.exists()` and
# `fs::rename`. macOS/BSD fall back to a pre-check + std::fs::rename.
[target.'cfg(target_os = "linux")'.dependencies]
rustix = { version = "1", features = ["fs"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
